Перевести на работу от БД